--- a/portfolio.html
+++ b/portfolio.html
@@ -45,9 +45,9 @@
         <h3>Trivia Game</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+        <img src="https://sarfulah.github.io/Gif/" alt="Gif Project">
 
-        <h3>Rutgers Info Widget</h3>
+        <h3>Gif Project</h3>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
