--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
         <h3>Crystal Game</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+        <img src="https://sarfulah.github.io/TriviaGame/" alt="Trivia Game">
 
         <h3>Trivia Game</h3>
       </div>
