--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
         <h3>Gif Project</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+        <img src="https://sarfulah.github.io/Train-Scheduler/." alt="Rock Paper Scissors">
 
         <h3>Rock Paper Scissors</h3>
       </div>
