portfolio pages in one

--- a/index.html
+++ b/index.html
@@ -23,21 +23,32 @@
 
     <div id="main-container" class="container">
         <section class="main-section">
-            <h1>About Me</h1>
+            <h2>About Me</h2>
+            <img src="../Basic-Portfolio/assets/images/IMG_5471.jpg">
+            <p>I'm a web developer with a background in Business. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Nullam egestas lobortis neque vel consectetur. Nullam mollis libero quis justo eleifend auctor.
+                Phasellus dapibus non sem et vestibulum. Aenean non maximus elit, id cursus leo. Pellentesque at mi
+                consequat, ullamcorper purus ut, interdum sem. Proin rutrum interdum nibh, et iaculis ipsum molestie et.
+                Donec ac nisi placerat, malesuada purus quis, dignissim mauris. Curabitur quis purus et risus posuere
+                porttitor. Sed rutrum, dolor imperdiet faucibus condimentum, tortor dolor commodo orci, vel facilisis
+                dui augue ac sapien. In mattis sapien vitae pretium suscipit. Curabitur eget molestie mauris, ac
+                placerat arcu. Morbi rhoncus ut tellus sit amet porttitor. Pellentesque posuere erat sed leo dapibus, eu
+                cursus ante porta. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+                Curae; Etiam consequat nibh eget risus convallis vulputate.
 
-            <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+                Nulla eleifend ut velit a cursus. Nunc imperdiet, ipsum ac rutrum feugiat, quam odio pulvinar massa,
+                quis tempus leo nulla venenatis sem. Ut interdum imperdiet elit ut consequat. Praesent venenatis nisi a
+                felis hendrerit euismod. Vivamus ut nulla in leo tincidunt tempor vel nec diam. Pellentesque vitae ante
+                commodo, tristique dui quis, viverra tellus. Maecenas ullamcorper, tellus nec suscipit accumsan, arcu
+                magna venenatis diam, at pulvinar justo leo ac risus. Ut varius feugiat eros vel volutpat. Morbi est
+                metus, pellentesque sit amet quam at, mattis fringilla quam. Sed mollis mi eget luctus cursus. Cras
+                finibus ultrices sollicitudin. Cras justo mauris, gravida a gravida quis, feugiat iaculis massa.
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc
-                porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui
-                massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus
-                vitae sollicitudin consectetur.</p>
-
-            <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id
-                eros iaculis, pulvinar quam eget, egestas mauris.</p>
-
-            <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor
-                et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-
+                Sed at pharetra massa. Suspendisse potenti. Aenean massa orci, tincidunt eget metus non, fringilla
+                ornare lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vehicula ipsum
+                scelerisque mollis facilisis. Phasellus id interdum odio. Donec at tellus orci. Maecenas mattis semper
+                magna, sed pellentesque eros aliquam eget.
+            </p>
         </section>
 
     </div>
