--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Portfolio | Sarfulah Stewart</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -12,13 +14,55 @@
   <header id="masthead">
     <div class="container">
       <a href="index.html" id="logo">Sarfulah Stewart</a>
-      <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-      </nav>
     </div>
   </header>
+
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>About Me</h1>
+
+      <img src="../Basic-Portfolio/assets/images/IMG_5471.jpg" class="auth-image" alt="Your Name">
+
+      <p>Full Stack Web Developer with a background in Small Business Management, educated at Indiana University of Pennsylvania. Received my Web Development Certification from University of Pennsylvania. Skills in HTML, CSS and continuing education with Javascript. Strengths in creativity, problem solving and teamwork. Building web pages that is not only eye-catching to users, but also user friendly.</p>
+
+      <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id
+        eros iaculis, pulvinar quam eget, egestas mauris.</p>
+
+      <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor
+        et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+
+    </section>
+
+  </div>
+
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h2>Contact</h2>
+
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h3>LinkedIn</h3>
+              <a href="https://www.linkedin.com/in/sarfulah-stewart-9ab45036/" target="_blank">
+                <img src="../Basic-Portfolio/assets/images/link.jpg" alt="LinkedIn">
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h3>Github</h3>
+              <a href="https://github.com/Sarfulah" target="_blank">
+                <img src="../Basic-Portfolio/assets/images/github.png" alt="Github">
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
 
   <div id="main-container" class="container">
     <section class="main-section">
@@ -26,35 +70,47 @@
 
       <div class="work">
         <a href="https://sarfulah.github.io/Word-Guess-Game/" target="_blank">
-          <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+          <img src="../Basic-Portfolio/assets/images/elephant.jpg" alt="Word Guess">
+          <h3>Word Guess</h3>
         </a>
 
-        <h3>Word Guess</h3>
       </div>
       <div class="work">
         <a href="https://sarfulah.github.io/unit-4-game/" target="_blank">
-          <img src="assets/images/technics-q-c-640-480-2.jpg" alt="Crystal Game">
-        
+          <img src="../Basic-Portfolio/assets/images/flower.jpg" alt="Crystal Game">
+          <h3>Crystal Game</h3>
         </a>
 
-        <h3>Crystal Game</h3>
       </div>
       <div class="work">
-        <img src="https://sarfulah.github.io/TriviaGame/" alt="Trivia Game">
-
-        <h3>Trivia Game</h3>
+        <a href="https://sarfulah.github.io/TriviaGame/" target="_blank">
+          <img src="../Basic-Portfolio/assets/images/birds.jpg" alt="Trivia Game">
+          <h3>Trivia Game</h3>
+        </a>
       </div>
       <div class="work">
-        <img src="https://sarfulah.github.io/Gif/" alt="Gif Project">
+        <a href="https://sarfulah.github.io/Gif/" target="_blank">
+          <img src="../Basic-Portfolio/assets/images/dragon.jpg" alt="Gif Project">
+          <h3>Gif Project</h3>
+        </a>
 
-        <h3>Gif Project</h3>
       </div>
       <div class="work">
-        <img src="https://sarfulah.github.io/Train-Scheduler/." alt="Rock Paper Scissors">
+        <a href="https://sarfulah.github.io/Train-Scheduler/." target="_blank">
+          <img src="../Basic-Portfolio/assets/images/train2.jpg" alt="Train Scheduler">
+          <h3>Train Scheduler</h3>
 
-        <h3>Rock Paper Scissors</h3>
+        </a>
+
       </div>
+      <div class="work">
+        <a href="https://nmarcionese.github.io/Project-1/" target="_blank">
+          <img src="../Basic-Portfolio/assets/images/project-1.png" alt="Project-1">
+          <h3>Project 1</h3>
 
+        </a>
+
+      </div>
     </section>
 
   </div>
