added liri bot to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -111,6 +111,14 @@
         </a>
 
       </div>
+      <div class="work">
+        <a href="https://sarfulah.github.io/liri-node-app/" target="_blank">
+          <img src="../liri-node-app/Jul 26 2019 7_55 AM.webm" alt="Liri Bot">
+          <h3>Liri Bot</h3>
+
+        </a>
+
+      </div>
     </section>
 
   </div>
