--- a/portfolio.html
+++ b/portfolio.html
@@ -112,8 +112,8 @@
 
       </div>
       <div class="work">
-        <a href="https://sarfulah.github.io/liri-node-app/" target="_blank">
-          <img src="../liri-node-app/Jul 26 2019 7_55 AM.webm" alt="Liri Bot">
+        <a href="https://drive.google.com/open?id=102XGiw8Y2jy0t4U1nmFj754M_K_GrSJc" target="_blank">
+          <img src="../Basic-Portfolio/assets/images/image.png" alt="Liri Bot">
           <h3>Liri Bot</h3>
 
         </a>
