added screenshots of work

--- a/portfolio.html
+++ b/portfolio.html
@@ -70,34 +70,34 @@
 
       <div class="work">
         <a href="https://sarfulah.github.io/Word-Guess-Game/" target="_blank">
-          <img src="../Basic-Portfolio/assets/images/elephant.jpg" alt="Word Guess">
+          <img src="../Basic-Portfolio/assets/images/wordSS.png" alt="Word Guess">
           <h3>Word Guess</h3>
         </a>
 
       </div>
       <div class="work">
         <a href="https://sarfulah.github.io/unit-4-game/" target="_blank">
-          <img src="../Basic-Portfolio/assets/images/flower.jpg" alt="Crystal Game">
+          <img src="../Basic-Portfolio/assets/images/crystalSS.png" alt="Crystal Game">
           <h3>Crystal Game</h3>
         </a>
 
       </div>
       <div class="work">
         <a href="https://sarfulah.github.io/TriviaGame/" target="_blank">
-          <img src="../Basic-Portfolio/assets/images/birds.jpg" alt="Trivia Game">
+          <img src="../Basic-Portfolio/assets/images/triviaSS.png" alt="Trivia Game">
           <h3>Trivia Game</h3>
         </a>
       </div>
       <div class="work">
         <a href="https://sarfulah.github.io/Gif/" target="_blank">
-          <img src="../Basic-Portfolio/assets/images/dragon.jpg" alt="Gif Project">
+          <img src="../Basic-Portfolio/assets/images/gifSS.png" alt="Gif Project">
           <h3>Gif Project</h3>
         </a>
 
       </div>
       <div class="work">
         <a href="https://sarfulah.github.io/Train-Scheduler/." target="_blank">
-          <img src="../Basic-Portfolio/assets/images/train2.jpg" alt="Train Scheduler">
+          <img src="../Basic-Portfolio/assets/images/trainSS.png" alt="Train Scheduler">
           <h3>Train Scheduler</h3>
 
         </a>
@@ -105,7 +105,7 @@
       </div>
       <div class="work">
         <a href="https://nmarcionese.github.io/Project-1/" target="_blank">
-          <img src="../Basic-Portfolio/assets/images/project-1.png" alt="Project-1">
+          <img src="../Basic-Portfolio/assets/images/project1.png" alt="Project-1">
           <h3>Project 1</h3>
 
         </a>
