Fix image filepaths and move portfolio.html contents to index.html

--- a/index.html
+++ b/index.html
@@ -2,62 +2,132 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="UTF-8">
-    <title>About | Sarfulah Stewart</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="UTF-8">
+  <title>Portfolio | Sarfulah Stewart</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
 
-    <header id="masthead">
-        </div>
-        <div class="container">
-            <a href="index.html" id="logo">Sarfulah Stewart</a>
-            <nav>
-                <a href="index.html">About</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="contact.html">Contact</a>
-            </nav>
-        </div>
-    </header>
-
-    <div id="main-container" class="container">
-        <section class="main-section">
-            <h2>About Me</h2>
-            <img src="../Basic-Portfolio/assets/images/IMG_5471.jpg">
-            <p>I'm a web developer with a background in Business. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Nullam egestas lobortis neque vel consectetur. Nullam mollis libero quis justo eleifend auctor.
-                Phasellus dapibus non sem et vestibulum. Aenean non maximus elit, id cursus leo. Pellentesque at mi
-                consequat, ullamcorper purus ut, interdum sem. Proin rutrum interdum nibh, et iaculis ipsum molestie et.
-                Donec ac nisi placerat, malesuada purus quis, dignissim mauris. Curabitur quis purus et risus posuere
-                porttitor. Sed rutrum, dolor imperdiet faucibus condimentum, tortor dolor commodo orci, vel facilisis
-                dui augue ac sapien. In mattis sapien vitae pretium suscipit. Curabitur eget molestie mauris, ac
-                placerat arcu. Morbi rhoncus ut tellus sit amet porttitor. Pellentesque posuere erat sed leo dapibus, eu
-                cursus ante porta. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-                Curae; Etiam consequat nibh eget risus convallis vulputate.
-
-                Nulla eleifend ut velit a cursus. Nunc imperdiet, ipsum ac rutrum feugiat, quam odio pulvinar massa,
-                quis tempus leo nulla venenatis sem. Ut interdum imperdiet elit ut consequat. Praesent venenatis nisi a
-                felis hendrerit euismod. Vivamus ut nulla in leo tincidunt tempor vel nec diam. Pellentesque vitae ante
-                commodo, tristique dui quis, viverra tellus. Maecenas ullamcorper, tellus nec suscipit accumsan, arcu
-                magna venenatis diam, at pulvinar justo leo ac risus. Ut varius feugiat eros vel volutpat. Morbi est
-                metus, pellentesque sit amet quam at, mattis fringilla quam. Sed mollis mi eget luctus cursus. Cras
-                finibus ultrices sollicitudin. Cras justo mauris, gravida a gravida quis, feugiat iaculis massa.
-
-                Sed at pharetra massa. Suspendisse potenti. Aenean massa orci, tincidunt eget metus non, fringilla
-                ornare lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vehicula ipsum
-                scelerisque mollis facilisis. Phasellus id interdum odio. Donec at tellus orci. Maecenas mattis semper
-                magna, sed pellentesque eros aliquam eget.
-            </p>
-        </section>
-
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Sarfulah Stewart</a>
     </div>
+  </header>
 
-    <footer>
-        <div class="container">
-            Copyright &copy;
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>About Me</h1>
+
+      <img src="assets/images/IMG_5471.jpg" class="auth-image" alt="Your Name">
+
+      <p>Full Stack Web Developer with a background in Small Business Management, educated at Indiana University of Pennsylvania. Received my Web Development Certification from University of Pennsylvania. Skills in HTML, CSS and continuing education with Javascript. Strengths in creativity, problem solving and teamwork. Building web pages that is not only eye-catching to users, but also user friendly.</p>
+
+      <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id
+        eros iaculis, pulvinar quam eget, egestas mauris.</p>
+
+      <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor
+        et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+
+    </section>
+
+  </div>
+
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h2>Contact</h2>
+
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h3>LinkedIn</h3>
+              <a href="https://www.linkedin.com/in/sarfulah-stewart-9ab45036/" target="_blank">
+                <img src="assets/images/link.jpg" alt="LinkedIn">
+              </a>
+            </div>
+          </div>
         </div>
-    </footer>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h3>Github</h3>
+              <a href="https://github.com/Sarfulah" target="_blank">
+                <img src="assets/images/github.png" alt="Github">
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>Portfolio</h1>
+
+      <div class="work">
+        <a href="https://sarfulah.github.io/Word-Guess-Game/" target="_blank">
+          <img src="assets/images/wordSS.png" alt="Word Guess">
+          <h3>Word Guess</h3>
+        </a>
+
+      </div>
+      <div class="work">
+        <a href="https://sarfulah.github.io/unit-4-game/" target="_blank">
+          <img src="assets/images/crystalSS.png" alt="Crystal Game">
+          <h3>Crystal Game</h3>
+        </a>
+
+      </div>
+      <div class="work">
+        <a href="https://sarfulah.github.io/TriviaGame/" target="_blank">
+          <img src="assets/images/triviaSS.png" alt="Trivia Game">
+          <h3>Trivia Game</h3>
+        </a>
+      </div>
+      <div class="work">
+        <a href="https://sarfulah.github.io/Gif/" target="_blank">
+          <img src="assets/images/gifSS.png" alt="Gif Project">
+          <h3>Gif Project</h3>
+        </a>
+
+      </div>
+      <div class="work">
+        <a href="https://sarfulah.github.io/Train-Scheduler/." target="_blank">
+          <img src="assets/images/trainSS.png" alt="Train Scheduler">
+          <h3>Train Scheduler</h3>
+
+        </a>
+
+      </div>
+      <div class="work">
+        <a href="https://nmarcionese.github.io/Project-1/" target="_blank">
+          <img src="assets/images/project1.png" alt="Project-1">
+          <h3>Project 1</h3>
+
+        </a>
+
+      </div>
+      <div class="work">
+        <a href="https://drive.google.com/open?id=1vsIr3XI1cgFDDJD2d3YQJsDH7PPOfq42" target="_blank">
+          <img src="assets/images/image.png" alt="Liri Bot">
+          <h3>Liri Bot</h3>
+
+        </a>
+
+      </div>
+    </section>
+
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy;
+    </div>
+  </footer>
 </body>
 
 </html>
