added friend finder app to portfolio

--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@
         </a>
 
       </div>
+      <div class="work">
+          <a href="https://sarfulah.github.io/Friend-Finder-App/" target="_blank">
+            <img src="assets/images/image (3).png" alt="Friend-Finder-App">
+            <h3>Friend Finder</h3>
+  
+          </a>
+  
+        </div>
     </section>
 
   </div>
