updated portoflio and add project2

--- a/index.html
+++ b/index.html
@@ -127,6 +127,14 @@
           </a>
   
         </div>
+        <div class="work">
+          <a href="https://warm-wildwood-64575.herokuapp.com/" target="_blank">
+            <img src="assets/images/image (4).png" alt="Project-2">
+            <h3>Project 2</h3>
+  
+          </a>
+  
+        </div>
     </section>
 
   </div>
