--- a/portfolio.html
+++ b/portfolio.html
@@ -119,6 +119,22 @@
         </a>
 
       </div>
+      <div class="work">
+          <a href="https://drive.google.com/open?id=1vsIr3XI1cgFDDJD2d3YQJsDH7PPOfq42" target="_blank">
+            <img src="../Basic-Portfolio/assets/images/image.png" alt="Liri Bot">
+            <h3>Liri Bot</h3>
+  
+          </a>
+  
+        </div>
+        <div class="work">
+            <a href="https://sarfulah.github.io/Friend-Finder-App/" target="_blank">
+              <img src="../Basic-Portfolio/assets/images/image.png" alt="Liri Bot">
+              <h3>Liri Bot</h3>
+    
+            </a>
+    
+          </div>
     </section>
 
   </div>
