added link to resume

--- a/index.html
+++ b/index.html
@@ -23,13 +23,16 @@
 
       <img src="assets/images/IMG_5471.jpg" class="auth-image" alt="Your Name">
 
-      <p>Full Stack Web Developer with a background in Small Business Management, educated at Indiana University of Pennsylvania. Received my Web Development Certification from University of Pennsylvania. Skills in HTML, CSS and continuing education with Javascript. Strengths in creativity, problem solving and teamwork. Building web pages that is not only eye-catching to users, but also user friendly.</p>
+      <strong><p>Full Stack Web Developer with a background in Small Business Management, educated at Indiana University of
+        Pennsylvania. Received my Web Development Certification from University of Pennsylvania. Skills in HTML, CSS and
+        continuing education with Javascript. Strengths in creativity, problem solving and teamwork. Building web pages
+        that is not only eye-catching to users, but also user friendly.</p></strong>
 
-      <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id
-        eros iaculis, pulvinar quam eget, egestas mauris.</p>
+        <strong><p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id
+        eros iaculis, pulvinar quam eget, egestas mauris.</p></strong>
 
-      <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor
-        et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        <strong><p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor
+        et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p></strong>
 
     </section>
 
@@ -37,13 +40,18 @@
 
   <div id="main-container" class="container">
     <section class="main-section">
-      <h2>Contact</h2>
+      <h1>Contact</h1>
+
+      <center><strong><p><h2>Email Address: Fu.Stew@yahoo.com || Phone Number: 267-469-4803</h2></p></strong></center>
+      <a href="https://drive.google.com/file/d/1LxKXwEK2tiVcTObvUOng6i6s7WCu4_Zv/view?usp=sharing">My Resume</a>
+      
+      <hr>
 
       <div class="row">
         <div class="col-sm-6">
           <div class="card">
             <div class="card-body">
-              <h3>LinkedIn</h3>
+              <h2>LinkedIn</h2>
               <a href="https://www.linkedin.com/in/sarfulah-stewart-9ab45036/" target="_blank">
                 <img src="assets/images/link.jpg" alt="LinkedIn">
               </a>
@@ -53,7 +61,7 @@
         <div class="col-sm-6">
           <div class="card">
             <div class="card-body">
-              <h3>Github</h3>
+              <h2>Github</h2>
               <a href="https://github.com/Sarfulah" target="_blank">
                 <img src="assets/images/github.png" alt="Github">
               </a>
@@ -120,21 +128,21 @@
 
       </div>
       <div class="work">
-          <a href="https://sarfulah.github.io/Friend-Finder-App/" target="_blank">
-            <img src="assets/images/image (3).png" alt="Friend-Finder-App">
-            <h3>Friend Finder</h3>
-  
-          </a>
-  
-        </div>
-        <div class="work">
-          <a href="https://warm-wildwood-64575.herokuapp.com/" target="_blank">
-            <img src="assets/images/image (4).png" alt="Project-2">
-            <h3>Project 2</h3>
-  
-          </a>
-  
-        </div>
+        <a href="https://sarfulah.github.io/Friend-Finder-App/" target="_blank">
+          <img src="assets/images/image (3).png" alt="Friend-Finder-App">
+          <h3>Friend Finder</h3>
+
+        </a>
+
+      </div>
+      <div class="work">
+        <a href="https://warm-wildwood-64575.herokuapp.com/" target="_blank">
+          <img src="assets/images/image (4).png" alt="Project-2">
+          <h3>Project 2</h3>
+
+        </a>
+
+      </div>
     </section>
 
   </div>
