added Clicky Game to portfolio

--- a/index.html
+++ b/index.html
@@ -143,6 +143,14 @@
         </a>
 
       </div>
+      <div class="work">
+        <a href="https://pure-mountain-69237.herokuapp.com//" target="_blank">
+          <img src="assets/images/image (5).png" alt="Clicky-Game">
+          <h3>Kimoji Game</h3>
+
+        </a>
+
+      </div>
     </section>
 
   </div>
