new files for portfolio

--- a/index.html
+++ b/index.html
@@ -151,6 +151,14 @@
         </a>
 
       </div>
+      <div class="work">
+        <a href="https://drive.google.com/file/d/1VpKOSUZvcFC7ivNAWFvTau3Nza0UDECV/view" target="_blank">
+          <img src="assets/images/image (6).png" alt="Bamazon">
+          <h3>Bamazon</h3>
+
+        </a>
+
+      </div>
     </section>
 
   </div>
