added project 3 to portfolio

--- a/index.html
+++ b/index.html
@@ -159,6 +159,14 @@
         </a>
 
       </div>
+      <div class="work">
+        <a href="https://rolo-dex.herokuapp.com/" target="_blank">
+          <img src="assets/images/image (7).png" alt="Project-3">
+          <h3>Project 3</h3>
+
+        </a>
+
+      </div>
     </section>
 
   </div>
